# PEOSGraph

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md
peosgraph/: __init__.py  config.py  graph.py  state.py
peosgraph/nodes/: __init__.py  executor.py  observer.py  planner.py  synthesiser.py
tests/: test_peos.py
