[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peosgraph"
version = "0.1.0"
description = "Production-grade LangGraph implementation of the PEOS orchestration pattern for LLM agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Naveen Kumar Baskaran", email = "naveen.baskaran@sap.com"},
]
keywords = ["llm", "agent", "orchestration", "peos", "langgraph", "planner", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "pytest-cov>=4.0"]
langgraph = ["langgraph>=0.1"]
litellm = ["litellm>=1.0"]

[project.urls]
Homepage = "https://github.com/naveenkumarbaskaran/PEOSGraph"
Documentation = "https://github.com/naveenkumarbaskaran/PEOSGraph/blob/main/docs/architecture.md"
Repository = "https://github.com/naveenkumarbaskaran/PEOSGraph"
Issues = "https://github.com/naveenkumarbaskaran/PEOSGraph/issues"
